changed occurrencies from .collect(Collectors.toList()) to .toList()