@@ -5,7 +5,6 @@ import static com.dimartinoFilippo.repository.mongo.BookMongoRepository.DB_NAME;
 import static org.assertj.core.api.Assertions.assertThat;
 import java.net.InetSocketAddress;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.Document;
@@ -115,7 +114,7 @@ public class AuthorMongoRepositoryTest {
 						d.getString("firstName"),
 						d.getString("lastName")
 						))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 }
