@@ -6,7 +6,6 @@ import static com.dimartinoFilippo.repository.mongo.BookMongoRepository.BOOK;
 
 import java.net.InetSocketAddress;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.bson.Document;
@@ -134,7 +133,7 @@ public class BookMongoRepositoryTest {
 							d.getInteger("publicationYear")
 							);
 				})
-				.collect(Collectors.toList());
+				.toList();
 	}
 	
 	@Test
